add_proxy4netology

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-CORRECT_PORT=8090
+MYSQL_ROOT_PASSWORD=password
+MYSQL_DATABASE=sokolkov_netology
+MYSQL_USER=docker_user
+MYSQL_PASSWORD=password
+DB_HOST=db
+DB_USER=docker_user
+DB_PASSWORD=password
+DB_NAME=sokolkov_netology
