--- a/haproxy/reverse/haproxy.cfg
+++ b/haproxy/reverse/haproxy.cfg
@@ -1,17 +1,18 @@
 global
-  maxconn 1000
+    daemon
+    maxconn 256
 
 defaults
-default-server init-addr none
+    mode http
+    timeout connect 5000ms
+    timeout client 50000ms
+    timeout server 50000ms
+    option forwardfor
 
-frontend http_front
-bind *:8080
-mode http
-default_backend http_back
+frontend http-in
+    bind *:8080
+    http-request set-header X-Forwarded-For %[src]
+    default_backend servers
 
-
-
-backend http_back
-balance roundrobin
-mode http
-server web 172.20.0.5:5000 check
+backend servers
+    server web shvirtd-example-python-web-1:8090
